--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Kentico.Kontent.Delivery" Version="13.0.1-beta9" />
+    <PackageReference Include="Kentico.Kontent.Delivery.Caching" Version="13.0.1-beta9" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
 
