--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "DeliveryOptions1": {
+    "ProjectId": "975bf280-fd91-488c-994c-2f04416e5ee3"
+  },
+  "DeliveryOptions2": {
+    "ProjectId": "975bf280-fd91-488c-994c-2f04416e5ee3"
+  }
 }
